# travis-play

./: .travis.yml  idris.cabal
