Name:           idris
Version:        1.1.0
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Beta
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       Functional Programming Language with Dependent Types
Description:    Idris is a general purpose language with full dependent types.
                It is compiled, with eager evaluation.
                Dependent types allow types to be predicated on values,
                meaning that some aspects of a program's behaviour can be
                specified precisely in the type. The language is closely
                related to Epigram and Agda. There is a tutorial at
                <http://www.idris-lang.org/documentation>.
                Features include:
                .
                * Full, first class, dependent types with dependent pattern matching
                .
                * where clauses, with rule, case expressions,
                  pattern matching let and lambda bindings
                .
                * Interfaces (similar to type classes), monad comprehensions
                .
                * do notation, idiom brackets, syntactic conveniences for lists,
                  tuples, dependent pairs
                .
                * Totality checking
                .
                * Coinductive types
                .
                * Indentation significant syntax, extensible syntax
                .
                * Cumulative universes
                .
                * Simple foreign function interface (to C)
                .
                * Hugs style interactive environment

Cabal-Version:  >= 1.18

Build-type:     Simple

Library
  hs-source-dirs: src
  Build-depends:  base >=4 && <5
                , aeson >= 0.6 && < 1.3
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.7
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , base64-bytestring < 1.1
                , binary >= 0.7 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.10
                , blaze-markup >= 0.5.2.1 && < 0.9
                , bytestring < 0.11
                , cheapskate < 0.1.1
                , code-page >= 0.1 && < 0.2
                , containers >= 0.5 && < 0.6
                , deepseq < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , filepath < 1.5
                , fingertree >= 0.1 && < 0.2
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7 && < 0.9
                , mtl >= 2.1 && < 2.3
                , network < 2.7
                , optparse-applicative >= 0.13 && < 0.15
                , parsers >= 0.9 && < 0.13
                , pretty < 1.2
                , process < 1.7
                , regex-tdfa >= 1.2
                , safe >= 0.3.9
                , split < 0.3
                , terminal-size < 0.4
                , text >=1.2.1.0 && < 1.3
                , time >= 1.4 && < 1.9
                , transformers < 0.6
                , transformers-compat >= 0.3
                , trifecta >= 1.6 && < 1.8
                , uniplate >=1.6 && < 1.7
                , unordered-containers < 0.3
                , utf8-string < 1.1
                , vector < 0.13
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.4
                , fsnotify >= 0.2 && < 2.2
                , async < 2.2
